Nueva clase Login. Métodos para login e input.

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <script src="Adicion.js"></script>
     <script src="Historial.js"></script>
     <script src="Input.js"></script>
+    <script src="Login.js"></script>
     <script src="Ejecutable.js"></script>
 </body>
 </html>
